--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <!-- Page Title -->
-    <title>Themefisher.Free Bootstrap3 based HTML5 Templates</title>
+    <title>Jundokan International Portugal - Associação Okinawa Goju Ryu Karate Do</title>
     <!-- Meta Description -->
-    <meta name="description" content="Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
+    <meta name="description" content="Jundokan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
     <meta name="keywords" content="karate, karate do, okinawa, goju ryu, goju, ryu, portugal, defesa pessoal, autoestima" />
     <meta name="author" content="Jundokan International Portugal" />
     <!-- Mobile Specific Meta -->
@@ -118,7 +118,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <!-- single slide -->
-                <div class="item active" style="background-image: url(img/banner.jpg)">
+                <div class="item active" style="background-image: linear-gradient(0deg, rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 0.8)),url(img/fundo2.jpg)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Treina<span> conosco</span>!</h2>
                         <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/Okinawa</span> Goju Ryu</h3>
@@ -143,7 +143,7 @@
                 <!-- end single slide -->
 
                 <!-- single slide -->
-                <div class="item" style="background-image: url(img/banner.jpg)">
+                <div class="item" style="background-image: linear-gradient(0deg, rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 0.8)),url(img/fundo2.jpg)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Treina<span> conosco</span>!</h2>
                         <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/Okinawa</span> Goju Ryu</h3>
@@ -168,7 +168,7 @@
                 <!-- end single slide -->
 
                 <!-- single slide -->
-                <div class="item" style="background-image: url(img/banner.jpg)">
+                <div class="item" style="background-image: linear-gradient(0deg, rgba(10, 10, 10, 0.6), rgba(10, 10, 10, 0.8)), url(img/fundo2.jpg)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Treina<span> conosco</span>!</h2>
                         <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/Okinawa</span> Goju Ryu</h3>
@@ -303,7 +303,7 @@
 
         <div class="project-wrapper">
             <figure class="mix work-item branding">
-                <img src="img/works/item-1.jpg" alt="" />
+                <img src="img/dojos/evora.jpeg" alt="" />
                 <figcaption class="overlay">
                     <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-1.jpg"><i class="fa fa-eye fa-lg"></i></a>
                     <h4>Labore et dolore magnam</h4>
@@ -312,7 +312,7 @@
             </figure>
 
             <figure class="mix work-item web">
-                <img src="img/works/item-2.jpg" alt="" />
+                <img src="img/dojos/rebordosa.jpeg" alt="" />
                 <figcaption class="overlay">
                     <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-2.jpg"><i class="fa fa-eye fa-lg"></i></a>
                     <h4>Labore et dolore magnam</h4>
@@ -321,7 +321,7 @@
             </figure>
 
             <figure class="mix work-item logo-design">
-                <img src="img/works/item-3.jpg" alt="" />
+                <img src="img/dojos/seixal.jpeg" alt="" />
                 <figcaption class="overlay">
                     <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-3.jpg"><i class="fa fa-eye fa-lg"></i></a>
                     <h4>Labore et dolore magnam</h4>
@@ -330,7 +330,7 @@
             </figure>
 
             <figure class="mix work-item photography">
-                <img src="img/works/item-4.jpg" alt="" />
+                <img src="img/dojos/paredes.jpeg" alt="" />
                 <figcaption class="overlay">
                     <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-4.jpg"><i class="fa fa-eye fa-lg"></i></a>
                     <h4>Labore et dolore magnam</h4>
@@ -517,6 +517,96 @@
                     </div>
                     <!-- end first count item -->
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="works" class="works clearfix">
+        <div class="container">
+            <div class="row">
+                <div class="sec-title text-center">
+                    <h2>Fotos das nossas origens</h2>
+                    <div class="devider"><i class="fa fa-heart-o fa-lg"></i></div>
+                </div>
+
+                <div class="sec-sub-title text-center">
+                    <p>
+                        Aqui focam algumas fotos que remontam às nossas origens e história!
+                    </p>
+                </div>
+
+                <div class="work-filter wow fadeInRight animated" data-wow-duration="500ms">
+                    <ul class="text-center">
+                        <li><a href="javascript:;" data-filter="all" class="active filter">Todos</a></li>
+                        <li><a href="javascript:;" data-filter=".branding" class="filter">Norte</a></li>
+                        <li><a href="javascript:;" data-filter=".web" class="filter">Centro</a></li>
+                        <li><a href="javascript:;" data-filter=".logo-design" class="filter">Sul</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-wrapper">
+            <figure class="mix work-item branding">
+                <img src="img/history/item-1.jpg" alt="" />
+                <figcaption class="overlay">
+                    <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-1.jpg"><i class="fa fa-eye fa-lg"></i></a>
+                    <h4>Labore et dolore magnam</h4>
+                    <p>Photography</p>
+                </figcaption>
+            </figure>
+
+            <figure class="mix work-item web">
+                <img src="img/history/item-2.jpg" alt="" />
+                <figcaption class="overlay">
+                    <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-2.jpg"><i class="fa fa-eye fa-lg"></i></a>
+                    <h4>Labore et dolore magnam</h4>
+                    <p>Photography</p>
+                </figcaption>
+            </figure>
+
+            <figure class="mix work-item logo-design">
+                <img src="img/history/item-3.jpg" alt="" />
+                <figcaption class="overlay">
+                    <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-3.jpg"><i class="fa fa-eye fa-lg"></i></a>
+                    <h4>Labore et dolore magnam</h4>
+                    <p>Photography</p>
+                </figcaption>
+            </figure>
+
+            <figure class="mix work-item photography">
+                <img src="img/history/item-4.jpg" alt="" />
+                <figcaption class="overlay">
+                    <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-4.jpg"><i class="fa fa-eye fa-lg"></i></a>
+                    <h4>Labore et dolore magnam</h4>
+                    <p>Photography</p>
+                </figcaption>
+            </figure>
+        </div>
+    </section>
+
+    <!--
+        End Our Works
+        ==================================== -->
+
+    <!--
+        Meet Our Team
+        ==================================== -->
+
+    <section id="team" class="team">
+        <div class="container">
+            <div class="row">
+                <div class="sec-title text-center wow fadeInUp animated" data-wow-duration="700ms">
+                    <h2>Calendário 2022</h2>
+                    <div class="devider"><i class="fa fa-heart-o fa-lg"></i></div>
+                </div>
+
+                <div class="sec-sub-title text-center wow fadeInRight animated" data-wow-duration="500ms">
+                    <p>
+                        Esta é o nosso calendário para 2022! 
+                    </p>
+                </div>
+
             </div>
         </div>
     </section>
