Final draft of the webpage

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property="og:description"
         content="Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
 
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="/img/favicon.jfif?format=80w" type="image/x-icon" />
     <!-- Google Font -->
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" rel="stylesheet"
@@ -91,7 +91,7 @@
             <nav class="collapse navbar-collapse navbar-right" role="navigation">
                 <ul id="nav" class="nav navbar-nav">
                     <li class="current"><a href="#body">Home</a></li>
-                    <li><a href="#features">Os nossos valores </a></li>
+                    <li><a href="#features">Preceitos</a></li>
                     <li><a href="#dojos">Dojos</a></li>
                     <li><a href="#team">Equipa técnica</a></li>
                     <li><a href="#calendar">Calendário</a></li>
@@ -158,7 +158,7 @@
                                 Retiro de Cintos Negros</span></h2>
                         <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
                                 class="color">/Lagos</span> Portugal</h3>
-                        <p data-wow-duration="1000ms" class="wow slideInRight animated">20-21 de Maio</p>
+                        <p data-wow-duration="1000ms" class="wow slideInRight animated">20-22 de Maio</p>
 
                         <ul class="social-links text-center">
                             <li>
@@ -224,13 +224,13 @@
         <div class="container">
             <div class="row">
                 <div class="sec-title text-center mb50 wow bounceInDown animated" data-wow-duration="500ms">
-                    <h2>Os nossos valores</h2>
+                    <h2>Os nossos preceitos</h2>
                     <div class="devider"><i class="fa fa-heart-o fa-lg"></i></div>
                 </div>
 
                 <div class="sec-sub-title text-center">
                     <h2>Dojo-Kun</h2>
-                    <br/>
+                    <br />
                     <p>
                         São estes os preceitos do nosso estilo de Karaté, não só para o aspecto físico mas também como
                         conduta de vida. Mais importante que explicar cada um, é a aplicação que devemos nós fazer dele.
@@ -240,7 +240,7 @@
                         importância.
                     </p>
                     <br />
-                   
+
                 </div>
 
                 <!-- service item -->
@@ -400,7 +400,7 @@
         Our Works
         ==================================== -->
 
-    <section id="dojos" class="works clearfix">
+    <section id="dojos" class="works clearfix dojos">
         <div class="container">
             <div class="row">
                 <div class="sec-title text-center">
@@ -429,29 +429,78 @@
             <figure class="mix work-item sul">
                 <img src="img/dojos/evora.jpeg" alt="" />
                 <figcaption class="overlay">
-                    <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-1.jpg"><i
+                    <a class="fancyboxInfo" rel="works" title="Dojo Évora - Academia Karate Évora" href="#dojoevora"><i
                             class="fa fa-eye fa-lg"></i></a>
-                    <h4>Academia de Karaté de Evora</h4>
-                    <p>Évora</p>
+                    <h4>Évora</h4>
+                    <p>Academia de Karaté de Evora</p>
+                    <ul class="social-links text-center">
+                        <li>
+                            <a href="https://www.facebook.com/Academia-de-Karat%C3%A9-%C3%89vora-166294320149928"><i
+                                    class="fa fa-facebook fa-lg"></i></a>
+                        </li>
+                        <li>
+                            <a href="mailto:academiadekarate.evora@gmail.com"><i class="fa fa-at fa-lg"></i></a>
+                        </li>
+                    </ul>
+                </figcaption>
+                <div id="dojoevora" style="display:none">
+                    <h2><span class="color">Dojo de Évora</span></h2>
+                    <h3><span class="">Academia de Karaté de Évora</span></h3>
+                    <br />
+                    <p>A Academia de Karaté – Évora (AKE) lecciona formação avançada em Karaté para crianças e adultos.
+                        Promove também seminários de Defesa Pessoal e WorkShops conjuntos com outras artes marciais.</p>
+                    <br />
+                    <p><b>Estilo:</b> Okinawa Goju-Ryu Karaté-Do. Parcerias e Filiações: Fundação Salesianos –
+                        Art&Sport;
+                        Internacional Sport Clube; Federação Nacional de Karaté Portugal; Jundokan Internacional
+                        Portugal.</p>
+                    <br />
+                    <p> <b>Inscrições:</b> Abertas para novos Alunos (Crianças e Adultos)</p>
+                    <br />
+                    <p> <b>Horários disponíveis:</b>
+                        Crianças e adultos - 2.ªs; 4.ªs e 6.ªs Feiras. Entre 18:30 e 21:30 mediante classe etária e
+                        graduação</p>
+                    <br />
+                    <p> <b>Aulas:</b> Instalações: Pavilhão Dom Bosco (Na Fundação Salesianos em Évora)</p><br />
+                    <p> <b>Inscrições:</b> Realizar na Secretaria da Fundação Salesianos de Évora</p><br />
+                    <p> <b>Mensalidades:</b> Pagamento Mensal - Efectuado na Secretaria da Fundação Salesianos de Évora
+                    </p><br />
+                    <p> <b>Idade Mínima:</b> 5 anos de Idade</p><br />
+                    <p> <b>Contactos</b>
+                    <p> Telemóvel: <a href="tel:966086463">966086463</a></p>
+                    <p> Email: <a href="mailto:academiadekarate.evora@gmail.com">academiadekarate.evora@gmail.com</a>
+                    </p><br />
+                    <p> <b>Observações:</b> Informamos que as inscrições se encontram abertas para Todos, quer sejam
+                        alunos da
+                        Fundação Salesianos ou de outras Escolas, quer sejam adultos ou crianças. Todos aqueles que
+                        quiserem integrar a nossa Academia serão bem vindos!</p>
+                    <br />
+
+                    <ul class="social-links text-center">
+                        <li>
+                            <a href="https://www.facebook.com/Academia-de-Karat%C3%A9-%C3%89vora-166294320149928"><i
+                                    class="fa fa-facebook fa-lg"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </figure>
+
+            <figure class="mix work-item centro">
+                <img src="img/dojos/seixal.jpeg" alt="" />
+                <figcaption class="overlay">
+                    <a class="fancyboxInfo" rel="works" title="Write Your Image Caption Here"
+                        href="img/dojos/seixal.jpeg"><i class="fa fa-eye fa-lg"></i></a>
+                    <h4>Seixal</h4>
+                    <p>Academia KarateSeixal</p>
                 </figcaption>
             </figure>
 
             <figure class="mix work-item centro">
                 <img src="img/dojos/seixal.jpeg" alt="" />
                 <figcaption class="overlay">
-                    <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-3.jpg"><i
-                            class="fa fa-eye fa-lg"></i></a>
-                    <h4>Academia Karate</h4>
-                    <p>Seixal</p>
-                </figcaption>
-            </figure>
-
-            <figure class="mix work-item centro">
-                <img src="img/dojos/seixal.jpeg" alt="" />
-                <figcaption class="overlay">
-                    <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-3.jpg"><i
-                            class="fa fa-eye fa-lg"></i></a>
-                    <h4>Academia Karate</h4>
+                    <a class="fancyboxInfo" rel="works" title="Write Your Image Caption Here"
+                        href="img/dojos/seixal.jpeg"><i class="fa fa-eye fa-lg"></i></a>
+                    <h4>Lisboa</h4>
                     <p>Brasil Gym</p>
                 </figcaption>
             </figure>
@@ -459,30 +508,30 @@
             <figure class="mix work-item norte">
                 <img src="img/dojos/rebordosa.jpeg" alt="" />
                 <figcaption class="overlay">
-                    <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-2.jpg"><i
-                            class="fa fa-eye fa-lg"></i></a>
-                    <h4>Academia Karate Rebordosa</h4>
-                    <p>Rebordosa</p>
+                    <a class="fancyboxInfo" rel="works" title="Write Your Image Caption Here"
+                        href="img/dojos/rebordosa.jpeg"><i class="fa fa-eye fa-lg"></i></a>
+                    <h4>Rebordosa</h4>
+                    <p>Escola de Karaté Rebordosa</p>
                 </figcaption>
             </figure>
 
             <figure class="mix work-item norte">
                 <img src="img/dojos/evora.jpeg" alt="" />
                 <figcaption class="overlay">
-                    <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-4.jpg"><i
-                            class="fa fa-eye fa-lg"></i></a>
-                    <h4>Academia Karate</h4>
-                    <p>Paredes</p>
+                    <a class="fancyboxInfo" rel="works" title="Write Your Image Caption Here"
+                        href="img/dojos/evora.jpeg"><i class="fa fa-eye fa-lg"></i></a>
+                    <h4>Paredes</h4>
+                    <p>Academia Karate de Paredes</p>
                 </figcaption>
             </figure>
 
             <figure class="mix work-item norte">
                 <img src="img/dojos/paredes.jpeg" alt="" />
                 <figcaption class="overlay">
-                    <a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-4.jpg"><i
-                            class="fa fa-eye fa-lg"></i></a>
-                    <h4>Academia Karate</h4>
-                    <p>Paços Ferreira</p>
+                    <a class="fancyboxInfo" rel="works" title="Write Your Image Caption Here"
+                        href="img/dojos/paredes.jpeg"><i class="fa fa-eye fa-lg"></i></a>
+                    <h4>Paços de Ferreira</h4>
+                    <p>Paços - Academia Karaté</p>
                 </figcaption>
             </figure>
 
@@ -703,7 +752,7 @@
         Calendário
         ==================================== -->
 
-    <section id="calendar" class="team">
+    <section id="calendar" class="calendar">
         <div class="container">
             <div class="row">
                 <div class="sec-title text-center wow fadeInUp animated" data-wow-duration="700ms">
@@ -722,7 +771,7 @@
                         <li>
                             <span>6-7 Novembro 2021</span>
                             <div class="content">
-                                <h3>Rebordosa</h3>
+                                <h3>Rebordosa - Estágio Nacional</h3>
                                 <p>
                                     Estágio nacional e de graduados na Rebordosa. Dia 6 estágio nacional, todas as
                                     graduações. Dia 7 estágio de graduados.
@@ -732,7 +781,7 @@
                         <li>
                             <span>22-23 Janeiro 2022</span>
                             <div class="content">
-                                <h3>Seixal</h3>
+                                <h3>Seixal - Estágio Nacional</h3>
                                 <p>
                                     Estágio nacional e de graduados no Seixal. Dia 22 estágio nacional, todas as
                                     graduações. Dia 23 estágio de graduados.
@@ -742,7 +791,7 @@
                         <li>
                             <span>26-27 Março 2022</span>
                             <div class="content">
-                                <h3>Seixal</h3>
+                                <h3>Seixal - Estágio Nacional</h3>
                                 <p>
                                     Estágio nacional e de graduados no Seixal. Dia 26 estágio nacional, todas as
                                     graduações. Dia 27 estágio de graduados.
@@ -752,7 +801,7 @@
                         <li>
                             <span>3 Abril 2022</span>
                             <div class="content">
-                                <h3>Évora</h3>
+                                <h3>Évora - Estágio Nacional</h3>
                                 <p>
                                     Estágio nacional e de graduados em Évora. Apenas da parte da manha.
                                 </p>
@@ -761,7 +810,7 @@
                         <li>
                             <span>24 Abril 2022</span>
                             <div class="content">
-                                <h3>Rebordosa</h3>
+                                <h3>Rebordosa - Taça JIP</h3>
                                 <p>
                                     Taça JIP (Jundokan Internacional de Portugal)
                                 </p>
@@ -770,7 +819,7 @@
                         <li>
                             <span>20-22 Maio 2022</span>
                             <div class="content">
-                                <h3>Lagos</h3>
+                                <h3>Lagos - Retiro </h3>
                                 <p>
                                     Retiro de instrutores e cintos negros.
                                 </p>
@@ -779,7 +828,7 @@
                         <li>
                             <span>11-12 Junho 2022</span>
                             <div class="content">
-                                <h3>Seixal</h3>
+                                <h3>Seixal - Estágio Nacional</h3>
                                 <p>
                                     Estágio nacional e de graduados no Seixal. Dia 11 estágio nacional, todas as
                                     graduações. Dia 12 estágio de graduados.
@@ -789,9 +838,9 @@
                         <li>
                             <span>7-10 Julho 2022</span>
                             <div class="content">
-                                <h3>Paredes</h3>
+                                <h3>Paredes - Gasshuku Internacional</h3>
                                 <p>
-                                    Gashuku Internacional, aberto a todos os interessados e com convidados
+                                    Gasshuku Internacional, aberto a todos os interessados e com convidados
                                     internacionais.
                                 </p>
                             </div>
@@ -811,7 +860,7 @@
             Our History
             ==================================== -->
 
-    <section id="history" class="works clearfix">
+    <section id="history" class="works clearfix history">
         <div class="parallax-overlay">
             <div class="container">
                 <div class="row">
@@ -824,33 +873,23 @@
             </div>
 
             <div class="project-wrapper">
-                <figure class="mix work-item branding">
-                    <img src="img/history/item-1.jpg" alt="" />
-                    <figcaption class="overlay">
-                        <a class="fancybox" rel="works" title="Write Your Image Caption Here"
-                            href="img/works/item-1.jpg"><i class="fa fa-eye fa-lg"></i></a>
-                        <h4>Labore et dolore magnam</h4>
-                        <p>Photography</p>
-                    </figcaption>
-                </figure>
-
                 <figure class="mix work-item web">
                     <img src="img/history/item-2.jpg" alt="" />
                     <figcaption class="overlay">
                         <a class="fancybox" rel="works" title="Write Your Image Caption Here"
-                            href="img/works/item-2.jpg"><i class="fa fa-eye fa-lg"></i></a>
-                        <h4>Labore et dolore magnam</h4>
-                        <p>Photography</p>
+                            href="img/history/item-2.jpg"><i class="fa fa-eye fa-lg"></i></a>
+                        <h4>Kanryo Higaonna</h4>
+                        <p>1853 - 1916</p>
                     </figcaption>
                 </figure>
 
-                <figure class="mix work-item logo-design">
-                    <img src="img/history/item-3.jpg" alt="" />
+                <figure class="mix work-item branding">
+                    <img src="img/history/item-1.jpg" alt="" />
                     <figcaption class="overlay">
                         <a class="fancybox" rel="works" title="Write Your Image Caption Here"
-                            href="img/works/item-3.jpg"><i class="fa fa-eye fa-lg"></i></a>
-                        <h4>Labore et dolore magnam</h4>
-                        <p>Photography</p>
+                            href="img/history/item-1.jpg"><i class="fa fa-eye fa-lg"></i></a>
+                        <h4>Chogun Miyagi</h4>
+                        <p>1888 - 1953</p>
                     </figcaption>
                 </figure>
 
@@ -858,9 +897,19 @@
                     <img src="img/history/item-4.jpg" alt="" />
                     <figcaption class="overlay">
                         <a class="fancybox" rel="works" title="Write Your Image Caption Here"
-                            href="img/works/item-4.jpg"><i class="fa fa-eye fa-lg"></i></a>
-                        <h4>Labore et dolore magnam</h4>
-                        <p>Photography</p>
+                            href="img/history/item-4.jpg"><i class="fa fa-eye fa-lg"></i></a>
+                        <h4>Eiichi Miazato</h4>
+                        <p>1922 - 1999</p>
+                    </figcaption>
+                </figure>
+
+                <figure class="mix work-item logo-design">
+                    <img src="img/history/item-3.jpg" alt="" />
+                    <figcaption class="overlay">
+                        <a class="fancybox" rel="works" title="Write Your Image Caption Here"
+                            href="img/history/item-3.jpg"><i class="fa fa-eye fa-lg"></i></a>
+                        <h4>Teruo Chinen</h4>
+                        <p>1941 - 2015</p>
                     </figcaption>
                 </figure>
             </div>
@@ -926,7 +975,7 @@
                                     class="fa fa-instagram fa-2x"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/karatedojorebordosa/"><i class="fa fa-at fa-2x"></i></a>
+                            <a href="mailto:direccaojip@gmail.com"><i class="fa fa-at fa-2x"></i></a>
                         </li>
                         <li>
                             <a href="https://www.facebook.com/Jundokan-Internacional-Portugal-539889529507256"><i
@@ -978,7 +1027,6 @@
                             <li><a
                                     href="https://www.facebook.com/Jundokan-Internacional-Portugal-539889529507256/">Facebook</a>
                             </li>
-                            <li><a href="https://jiportugal.github.io/">Webpage</a></li>
                             <li><a href="https://www.instagram.com/karatedojorebordosa/">Instagram - Rebordosa</a></li>
                             <li><a href="https://www.instagram.com/karategojuryuseixal/">Instagram - Seixal</a></li>
                         </ul>
