Including "Dojos do Norte" and improvments on mobile layout

--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
             <nav class="collapse navbar-collapse navbar-right" role="navigation">
                 <ul id="nav" class="nav navbar-nav">
                     <li class="current"><a href="#body">Home</a></li>
-                    <li><a href="#features">Preceitos</a></li>
                     <li><a href="#dojos">Dojos</a></li>
                     <li><a href="#team">Equipa técnica</a></li>
                     <li><a href="#calendar">Calendário</a></li>
@@ -126,13 +125,14 @@
             <div class="carousel-inner" role="listbox">
 
                 <!-- single slide -->
-                <div class="item active" style="background-image: url(img/parallax/fundo2.png)">
+                <div class="item active" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.7) 100%), url('img/parallax/fundo2.png');">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
                             Estágio Nacional<span> Rebordosa/Paredes</span>!</h2>
-                        <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
-                                class="color">26/27 de Março 2022 </span>  </h3>
-                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Dia 22 para todas graduações e dia 23 apenas para graduados</p>
+                        <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">26/27 de
+                                Março 2022 </span> </h3>
+                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Dia 22 para todas graduações e
+                            dia 23 apenas para graduados</p>
 
                         <ul class="social-links text-center">
                             <li>
@@ -154,13 +154,14 @@
 
 
                 <!-- single slide -->
-                <div class="item" style="background-image: url(img/parallax/saudacao.jpg)">
+                <div class="item" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.7) 100%), url('img/parallax/saudacao.jpg');">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
                             Estágio Nacional<span> Évora</span>!</h2>
-                        <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
-                                class="color">/10 de Abril 2022 </span> das 10 às 13 </h3>
-                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Pavilhão Escola dos Salesianos</p>
+                        <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/10 de Abril
+                                2022 </span> das 10 às 13 </h3>
+                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Pavilhão Escola dos Salesianos
+                        </p>
 
                         <ul class="social-links text-center">
                             <li>
@@ -182,7 +183,7 @@
 
                 <!-- single slide -->
                 <div class="item"
-                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.8) 100%, rgba(0, 0, 0, 0.8) 100%), url(img/parallax/kata.jpg)">
+                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.9) 100%, rgba(0, 0, 0, 0.9) 100%), url(img/parallax/kata.jpg)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> Gasshuku
                         </h2>
@@ -211,7 +212,7 @@
 
                 <!-- single slide -->
                 <div class="item"
-                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.8) 100%, rgba(0, 0, 0, 0.8) 100%), url(img/parallax/estagio.jpg)">
+                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.85) 100%, rgba(0, 0, 0, 0.85) 100%), url(img/parallax/estagio.jpg)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> Gasshuku
                         </h2>
@@ -241,7 +242,7 @@
 
                 <!-- single slide -->
                 <div class="item"
-                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.8) 100%, rgba(0, 0, 0, 0.8) 100%), url(img/parallax/tacajudokan.jpg)">
+                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.9) 100%, rgba(0, 0, 0, 0.9) 100%), url(img/parallax/tacajudokan.jpg)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> Taça
                             Nacional José Campos - Jundokan
@@ -270,8 +271,8 @@
                 </div>
                 <!-- end single slide -->
 
-                 <!-- single slide -->
-                 <div class="item" style="background-image: url(img/parallax/fundo2.png)">
+                <!-- single slide -->
+                <div class="item" style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/parallax/fundo2.png)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
                             Treina<span> conosco</span>!</h2>
@@ -562,7 +563,9 @@
                                     Promove também seminários de Defesa Pessoal e WorkShops conjuntos com outras
                                     artes marciais.</p>
                                 <br />
-                                <p><b>Estilo:</b> Okinawa Goju-Ryu Karaté-Do. Parcerias e Filiações: Fundação
+                                <p><b>Estilo:</b> Okinawa Goju-Ryu Karaté-Do. </p>
+                                <br />
+                                <p><b> Parcerias e Filiações: Fundação</b>
                                     Salesianos –
                                     Art&Sport;
                                     Internacional Sport Clube; Federação Nacional de Karaté Portugal; Jundokan
@@ -680,7 +683,9 @@
                                     prática de karaté, kobudo e defesa pessoal, para crianças e adultos. Promove também
                                     seminários, WorkShops, competições e demonstrações..</p>
                                 <br />
-                                <p><b>Estilo:</b> Okinawa Goju-Ryu Karaté-Do. Parcerias e Filiações: Altis Clube de
+                                <p><b>Estilo:</b> Okinawa Goju-Ryu Karaté-Do. </p>
+                                <br />
+                                <p><b>Parcerias e Filiações: </b>Altis Clube de
                                     Paredes; Câmara Municipal de Paredes; Federação Nacional de Karaté Portugal;
                                     Jundokan Internacional Portugal.</p>
                                 <br />
@@ -782,7 +787,9 @@
                                     prática de karaté, kobudo e defesa pessoal, para crianças e adultos. Promove também
                                     seminários, WorkShops, competições e demonstrações..</p>
                                 <br />
-                                <p><b>Estilo:</b> Okinawa Goju-Ryu Karaté-Do. Parcerias e Filiações: Altis Clube de
+                                <p><b>Estilo:</b> Okinawa Goju-Ryu Karaté-Do. </p>
+                                <br />
+                                <p><b>Parcerias e Filiações: </b>Altis Clube de
                                     Paredes; Câmara Municipal de Paredes; Federação Nacional de Karaté Portugal;
                                     Jundokan Internacional Portugal.</p>
                                 <br />
@@ -878,10 +885,13 @@
                                     prática de karaté, kobudo e defesa pessoal, para crianças e adultos. Promove também
                                     seminários, WorkShops, competições e demonstrações..</p>
                                 <br />
-                                <p><b>Estilo:</b> Okinawa Goju-Ryu Karaté-Do. Parcerias e Filiações: Altis Clube de
+                                <p><b>Estilo:</b> Okinawa Goju-Ryu Karaté-Do. </p>
+                                <br />
+                                <p><b>Parcerias e Filiações: </b>Altis Clube de
                                     Paredes; Câmara Municipal de Paredes; Federação Nacional de Karaté Portugal;
                                     Jundokan Internacional Portugal.</p>
                                 <br />
+                                
                                 <p><b>Instrutores</b>
                                 <p><b> - Responsável Técnico:</b> Fernando Gualter Morgado 6º Dan</p>
                                 <p><b> - Responsável do Dojo:</b> Mário Folgôa 4º Dan e Francisco Nunes 3º Dan</p>
@@ -1001,7 +1011,7 @@
                         </figcaption>
                     </div>
                     <h4>Sensei Leonardo Pereira</h4>
-                    <span>Equipa Técnica Nacional</span>
+                    <span>Equipa Técnica Nacional e responsável do Dojo de Lisboa</span>
                 </figure>
                 <!-- end single member -->
 
@@ -1024,7 +1034,7 @@
                         </figcaption>
                     </div>
                     <h4>Sensei Fernando Morgado</h4>
-                    <span>Equipa Técnica Nacional</span>
+                    <span>Equipa Técnica Nacional e responsável técnico dos Dojos da região Norte</span>
                 </figure>
                 <!-- end single member -->
 
@@ -1049,30 +1059,7 @@
                         </figcaption>
                     </div>
                     <h4>Sensei Fábio Basílio</h4>
-                    <span>Equipa Técnica Nacional</span>
-                </figure>
-                <!-- end single member -->
-
-                <!-- single member -->
-                <figure class="team-member col-md-4 col-sm-6 col-xs-12 text-center wow fadeInUp animated"
-                    data-wow-duration="500ms">
-                    <div class="member-thumb">
-                        <img src="img/team/sensei.jpg" alt="Team Member" class="img-responsive" />
-                        <figcaption class="overlay">
-                            <h5>5º Dan</h5>
-                            <p></p>
-                            <ul class="social-links text-center">
-                                <li>
-                                    <a href=""><i class="fa fa-twitter fa-lg"></i></a>
-                                </li>
-                                <li>
-                                    <a href=""><i class="fa fa-facebook fa-lg"></i></a>
-                                </li>
-                            </ul>
-                        </figcaption>
-                    </div>
-                    <h4>Sensei Francisco Pinto</h4>
-                    <span>Equipa Técnica Nacional</span>
+                    <span>Equipa Técnica Nacional e responsável do Dojo de Évora</span>
                 </figure>
                 <!-- end single member -->
 
@@ -1096,6 +1083,29 @@
                     </div>
                     <h4>Sensei Alvaro Santos</h4>
                     <span>Equipa Técnica Nacional</span>
+                </figure>
+                <!-- end single member -->
+
+                <!-- single member -->
+                <figure class="team-member col-md-4 col-sm-6 col-xs-12 text-center wow fadeInUp animated"
+                    data-wow-duration="500ms">
+                    <div class="member-thumb">
+                        <img src="img/team/sensei.jpg" alt="Team Member" class="img-responsive" />
+                        <figcaption class="overlay">
+                            <h5>5º Dan</h5>
+                            <p></p>
+                            <ul class="social-links text-center">
+                                <li>
+                                    <a href=""><i class="fa fa-twitter fa-lg"></i></a>
+                                </li>
+                                <li>
+                                    <a href=""><i class="fa fa-facebook fa-lg"></i></a>
+                                </li>
+                            </ul>
+                        </figcaption>
+                    </div>
+                    <h4>Sensei Francisco Pinto </h4>
+                    <span>Equipa Técnica Nacional e responsável do Dojo de Paredes</span>
                 </figure>
                 <!-- end single member -->
             </div>
